--- a/InKeLive-gcz_99/Podfile
+++ b/InKeLive-gcz_99/Podfile
@@ -7,6 +7,7 @@ pod 'MJExtension', '~> 3.0.13'
 pod 'Masonry', '~> 1.0.2'
 pod 'MBProgressHUD', '~> 1.0.0'
 pod 'ReactiveCocoa', '~> 2.4.7'
+pod 'FMDB'
 
 pod 'Reachability', '~> 3.2'
 pod 'libksygpulive/libksygpulive'
