--- a/InKeLive-gcz_99/InKeLive/Info.plist
+++ b/InKeLive-gcz_99/InKeLive/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>是否允许调用相册</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许调用相机</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
@@ -55,8 +59,6 @@
 	<string>是否允许app访问你的位置？</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>是否允许此App使用你的麦克风？</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>是否允许此App访问你的相册？</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Candara.ttf</string>
