tabbar模块修改,活动中心提出 添加检查更新

--- a/InKeLive-gcz_99/Podfile
+++ b/InKeLive-gcz_99/Podfile
@@ -13,6 +13,7 @@ pod 'pop'
 pod 'UMCCommon'
 pod 'UMCAnalytics'
 pod 'UMCSecurityPlugins'
+pod 'ZYQAssetPickerController'
 
 pod 'Reachability', '~> 3.2'
 pod 'libksygpulive/libksygpulive'
