--- a/InKeLive-gcz_99/InKeLive/Info.plist
+++ b/InKeLive-gcz_99/InKeLive/Info.plist
@@ -2,10 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>zh_CN</string>
+	</array>
+	<key>apkcode</key>
+	<integer>5</integer>
 	<key>LSApplicationQueriesSchemes</key>
 	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>china</string>
 	<key>CFBundleDisplayName</key>
 	<string>1258直播</string>
 	<key>CFBundleExecutable</key>
