去掉首页直播标志 登录界面无法账号选框无法选择修改,下拉按钮加大,注册下移 隐身后用户列表显示错误 修改麦状态ing

--- a/InKeLive-gcz_99/InKeLive/Info.plist
+++ b/InKeLive-gcz_99/InKeLive/Info.plist
@@ -2,17 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
-	<key>CFBundleLocalizations</key>
-	<array>
-		<string>en</string>
-		<string>zh_CN</string>
-	</array>
-	<key>apkcode</key>
-	<integer>5</integer>
-	<key>LSApplicationQueriesSchemes</key>
-	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>china</string>
 	<key>CFBundleDisplayName</key>
@@ -23,6 +12,11 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en</string>
+		<string>zh_CN</string>
+	</array>
 	<key>CFBundleName</key>
 	<string>1258直播</string>
 	<key>CFBundlePackageType</key>
@@ -45,6 +39,8 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>LSApplicationQueriesSchemes</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
@@ -82,6 +78,12 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
+	<key>apkcode</key>
+	<integer>5</integer>
 </dict>
 </plist>
